# ROScribe

./: .gitignore  README.md  pyproject.toml
ROS_index_database/ros_index_db_humble_2023_10_31/9bc41847-be22-4a07-b67e-ad47a240b515/: index_metadata.pickle
ROS_index_database/ros_index_db_noetic_2023_10_31/47599d51-a730-4020-8538-c84126477355/: index_metadata.pickle
roscribe/: gen_agent.py  generator.py  main.py  model.py  pack_agent.py  parser.py  prompt.py  prompts.py  ros_bs_transformer.py  ros_index_chatbot.py  ros_index_repo.py  ros_index_to_vectorstore.py  spec_agent.py  support_agent.py  tools.py  ui.py  visualization.py
