[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roscribe"
version = "0.0.1"
description = "Translate natural language into robot software."
readme = "README.md"
authors = [{ name = "RoboCoach Technologies", email = "robocoachtechnologies@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators ",
    "Framework :: Robot Framework :: Tool"
]
keywords = ["Large Language Models", "AI-assisted Code Generation", "Robotics"]
dependencies = [
    "langchain[openai]",
    "graphviz",
    "schema"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/RoboCoachTechnologies/ROScribe"
"Bug Tracker" = "https://github.com/RoboCoachTechnologies/ROScribe/issues"

[project.scripts]
roscribe = "roscribe.main:main"

[tool.setuptools]
packages = ["roscribe"]
